[gd_scene load_steps=31 format=3 uid="uid://b0umexyrvmbim"]

[ext_resource type="PackedScene" uid="uid://sbqhkqvnc37r" path="res://scenes/levels/level_template.tscn" id="1_yp552"]
[ext_resource type="PackedScene" uid="uid://32416h8esj0x" path="res://scenes/objects/gate.tscn" id="2_7falm"]
[ext_resource type="Script" path="res://scenes/levels/outside.gd" id="2_431sx"]
[ext_resource type="Texture2D" uid="uid://dld3qok7vc75t" path="res://graphics/ground/stones.png" id="2_xrllp"]
[ext_resource type="Texture2D" uid="uid://wi0jv43rvovc" path="res://graphics/decals/dirt_patch.png" id="3_podyi"]
[ext_resource type="Texture2D" uid="uid://dr84blpjxmqa6" path="res://graphics/tilesets/outside_walls.png" id="4_jqrx2"]
[ext_resource type="Texture2D" uid="uid://i2yg3g81odnb" path="res://graphics/tilesets/soil.png" id="5_oftrm"]
[ext_resource type="Texture2D" uid="uid://ck8ubobq0e5qv" path="res://graphics/decals/moss/moss_1.png" id="6_fu4wf"]
[ext_resource type="Texture2D" uid="uid://bpnpr3gvh04k2" path="res://graphics/decals/moss/moss_2.png" id="7_pmadl"]
[ext_resource type="Texture2D" uid="uid://bodkcajthrinp" path="res://graphics/decals/moss/moss_3.png" id="8_gtbwe"]
[ext_resource type="Texture2D" uid="uid://vdw85sbqdprq" path="res://graphics/decals/moss/moss_4.png" id="9_31sap"]
[ext_resource type="Texture2D" uid="uid://bixjlbtbua2m2" path="res://graphics/decals/moss/moss_5.png" id="10_5qffe"]
[ext_resource type="PackedScene" uid="uid://df0m225f5pujv" path="res://scenes/houses/house.tscn" id="11_ivfpn"]
[ext_resource type="PackedScene" uid="uid://d1irnxeaw6ro3" path="res://scenes/objects/steam_vent.tscn" id="12_bshe7"]
[ext_resource type="PackedScene" uid="uid://ype7mfjjvslt" path="res://scenes/objects/box.tscn" id="15_yvj4c"]
[ext_resource type="PackedScene" uid="uid://w4w2yd8qbnyf" path="res://scenes/objects/toilet.tscn" id="16_a8xji"]
[ext_resource type="PackedScene" uid="uid://35scyslevvd" path="res://scenes/enemies/scout.tscn" id="17_c2bxy"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_xxfhi"]
polygon = PackedVector2Array(-65, -65, 195, -65, 195, 65, -65, 65)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_us6j1"]
polygon = PackedVector2Array(-65, -65, 65, -65, 65, 195, -65, 195)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_jnpft"]
polygon = PackedVector2Array(65, -195, 65, 195, -65, 195, -65, -195)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_tasdc"]
polygon = PackedVector2Array(65, 45, -65, 45, -65, -195, 65, -195)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_h01jn"]
polygon = PackedVector2Array(-195, -65, 195, -65, 195, 65, -195, 65)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_r2gjl"]
polygon = PackedVector2Array(195, -65, -65, -65, -65, 195, 65, 195, 65, 65, 195, 65)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_alovj"]
polygon = PackedVector2Array(-65, -195, -65, 65, 195, 65, 195, -65, 65, -65, 65, -195)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_a2hsa"]
polygon = PackedVector2Array(-195, 65, -195, -65, 65, -65, 65, 65)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_r2mkm"]
polygon = PackedVector2Array(65, 195, 65, -65, -195, -65, -195, 65, -65, 65, -65, 195)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_2ivs8"]
polygon = PackedVector2Array(-195, 65, 65, 65, 65, -195, -65, -195, -65, -65, -195, -65)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8t2um"]
resource_name = "walls"
texture = ExtResource("4_jqrx2")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_xxfhi")
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-65, -65, -65, 65, 195, 65, 195, -65)
1:0/0 = 0
1:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_h01jn")
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(195, 65, 195, -65, -195, -65, -195, 65)
2:0/0 = 0
2:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_a2hsa")
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(65, 65, 65, -65, -195, -65, -195, 65)
0:1/0 = 0
0:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_us6j1")
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(65, -65, -65, -65, -65, 195, 65, 195)
1:1/0 = 0
1:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_r2gjl")
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(195, 65, 195, -65, -65, -65, -65, 195, 65, 195, 63.6396, 65)
2:1/0 = 0
2:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_r2mkm")
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-65, 195, 65, 195, 65, -65, -195, -65, -195, 65, -65, 63.6396)
0:2/0 = 0
0:2/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_jnpft")
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(65, -195, -65, -195, -65, 195, 65, 195)
1:2/0 = 0
1:2/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_alovj")
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(65, -195, -65, -195, -65, 65, 195, 65, 195, -65, 65, -63.6396)
2:2/0 = 0
2:2/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_2ivs8")
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, -65, -195, 65, 65, 65, 65, -195, -65, -195, -63.6396, -65)
0:3/0 = 0
0:3/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_tasdc")
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-65, 65, 65, 65, 65, -195, -65, -195)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fg0uk"]
resource_name = "soil"
texture = ExtResource("5_oftrm")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_1tplg"]
tile_size = Vector2i(390, 390)
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 43
sources/0 = SubResource("TileSetAtlasSource_8t2um")
sources/1 = SubResource("TileSetAtlasSource_fg0uk")

[node name="Outside" instance=ExtResource("1_yp552")]
script = ExtResource("2_431sx")

[node name="Soil" type="Sprite2D" parent="Ground" index="0"]
texture_repeat = 2
position = Vector2(640, 462)
texture = ExtResource("2_xrllp")
region_enabled = true
region_rect = Rect2(-2972.16, -1641.69, 20000, 4262.68)
metadata/_edit_lock_ = true

[node name="Dirt" type="Sprite2D" parent="Ground" index="1"]
modulate = Color(0.607843, 0.443137, 0.278431, 1)
position = Vector2(-453, 1288)
texture = ExtResource("3_podyi")

[node name="TileMap" type="TileMap" parent="Ground" index="2"]
tile_set = SubResource("TileSet_1tplg")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(131075, 1, 0, 131076, 65537, 0, 131077, 131073, 0, 196611, 1, 1, 262147, 1, 2, 196612, 65537, 1, 262148, 65537, 2, 196613, 131073, 1, 262149, 131073, 2, -65530, 1, 1, 6, 1, 1, 65542, 1, 1, 131078, 1, 1, 196614, 1, 1, 262150, 1, 1, -65529, 65537, 1, 7, 65537, 1, 65543, 65537, 1, 131079, 65537, 1, 196615, 65537, 1, 262151, 65537, 1, -65528, 65537, 1, 8, 65537, 1, 65544, 65537, 1, 131080, 65537, 1, 196616, 65537, 1, 262152, 65537, 1, -65527, 65537, 1, 9, 65537, 1, 65545, 65537, 1, 131081, 65537, 1, 196617, 65537, 1, 262153, 65537, 1, -65526, 65537, 1, 10, 65537, 1, 65546, 65537, 1, 131082, 65537, 1, 196618, 65537, 1, 262154, 65537, 1, -65525, 65537, 1, 11, 65537, 1, 65547, 65537, 1, 131083, 65537, 1, 196619, 65537, 1, 262155, 65537, 1, -65524, 65537, 1, 12, 65537, 1, 65548, 65537, 1, 131084, 65537, 1, 196620, 65537, 1, 262156, 65537, 1, -65523, 65537, 1, 13, 65537, 1, 65549, 65537, 1, 131085, 65537, 1, 196621, 65537, 1, 262157, 65537, 1, -131066, 1, 0, 327686, 1, 2, -131058, 131073, 0, 327694, 131073, 2, -65522, 131073, 1, 14, 131073, 1, 65550, 131073, 1, 131086, 131073, 1, 196622, 131073, 1, 262158, 131073, 1, 327687, 65537, 2, 327688, 65537, 2, 327689, 65537, 2, 327690, 65537, 2, 327691, 65537, 2, 327692, 65537, 2, 327693, 65537, 2, -131065, 65537, 0, -131064, 65537, 0, -131063, 65537, 0, -131062, 65537, 0, -131061, 65537, 0, -131060, 65537, 0, -131059, 65537, 0, 262139, 0, 2, 327675, 0, 2, 393211, 0, 2, 196603, 0, 2, 131067, 131072, 1)
layer_1/name = "Walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(327677, 65536, 2, 262141, 65536, 1, 196606, 131072, 1, 196605, 65536, 2, 131069, 0, 2, 65533, 0, 2, 327678, 65536, 0, 327679, 65536, 0, 262144, 65536, 0, 262145, 65536, 0, 262146, 65536, 0, 262147, 65536, 0, 262148, 131072, 0, -3, 0, 2, -65539, 0, 2, -131075, 0, 2, 262150, 131072, 2, 196614, 0, 2, 131078, 0, 1, 6, 0, 3, -65530, 0, 2, -131066, 131072, 1, -131067, 0, 0, 262142, 131072, 2)

[node name="Moss1" type="Sprite2D" parent="Ground" index="3"]
position = Vector2(2730, -6)
rotation = 0.832294
texture = ExtResource("6_fu4wf")

[node name="Moss2" type="Sprite2D" parent="Ground" index="4"]
position = Vector2(2347, 95)
texture = ExtResource("7_pmadl")

[node name="Moss3" type="Sprite2D" parent="Ground" index="5"]
position = Vector2(1422, 1534)
texture = ExtResource("8_gtbwe")

[node name="Moss4" type="Sprite2D" parent="Ground" index="6"]
position = Vector2(2328, 1498)
rotation = 1.32848
texture = ExtResource("9_31sap")

[node name="Moss5" type="Sprite2D" parent="Ground" index="7"]
position = Vector2(2394, 1056)
texture = ExtResource("10_5qffe")

[node name="House" parent="Ground" index="8" instance=ExtResource("11_ivfpn")]
position = Vector2(4925, 15)

[node name="SteamVent" parent="Ground" index="9" instance=ExtResource("12_bshe7")]
position = Vector2(1434, 1286)

[node name="SteamVent2" parent="Ground" index="10" instance=ExtResource("12_bshe7")]
position = Vector2(1787, 1286)

[node name="SteamVent3" parent="Ground" index="11" instance=ExtResource("12_bshe7")]
position = Vector2(2105, 1286)

[node name="Gate" parent="Objects" index="0" instance=ExtResource("2_7falm")]

[node name="Box" parent="Objects" index="1" instance=ExtResource("15_yvj4c")]
position = Vector2(2869, 1238)
rotation = -2.31244
collision_mask = 11

[node name="Box2" parent="Objects" index="2" instance=ExtResource("15_yvj4c")]
position = Vector2(2740, 1601)
rotation = -1.57079
collision_mask = 11

[node name="Toilet" parent="Objects" index="3" instance=ExtResource("16_a8xji")]
position = Vector2(9416, -412)
collision_mask = 11

[node name="Toilet2" parent="Objects" index="4" instance=ExtResource("16_a8xji")]
position = Vector2(9422, 1623)
rotation = 3.14159
collision_mask = 11

[node name="Box3" parent="Objects" index="5" instance=ExtResource("15_yvj4c")]
position = Vector2(1439, 373)
collision_mask = 11

[node name="Box4" parent="Objects" index="6" instance=ExtResource("15_yvj4c")]
position = Vector2(-387, 1154)
rotation = 4.71238
collision_mask = 11

[node name="Box5" parent="Objects" index="7" instance=ExtResource("15_yvj4c")]
position = Vector2(-759, 592)
rotation = 4.71238
collision_mask = 11

[node name="Scout2" parent="Characters/Enemies" index="0" instance=ExtResource("17_c2bxy")]
position = Vector2(1134, 1552)

[node name="Scout3" parent="Characters/Enemies" index="1" instance=ExtResource("17_c2bxy")]
position = Vector2(127, 1551)

[node name="Player" parent="Characters" index="1"]
position = Vector2(584, 605)

[connection signal="player_entered" from="Ground/House" to="." method="_on_house_player_entered"]
[connection signal="player_exited" from="Ground/House" to="." method="_on_house_player_exited"]
[connection signal="entered" from="Objects/Gate" to="." method="_on_gate_entered"]
